Revision history for Perl extension Test-Compile

0.15.1 DEVELOPMENT RELEASE          (Evan Giles <egiles@cpan.org>)
    - Skip tests if there are not files to test (rt69297)
    - Handle taint mode correctly (rt55837)

0.15  Fri 2012.02.03 20:33:55 NZST (Evan Giles <egiles@cpan.org>)
    - Fork, and run compile tests in the child process (rt73290 & rt73291)

0.14  Tue 2012.01.10 20:03:24 NZST (Evan Giles <egiles@cpan.org>)
    - Convert to Module::Build
    - Improved test for pl_file_ok()
    - Better test coverage (which files do we process, failed to compile, etc)
    - Remove duplicate code

0.13  Tue 2010.03.02 15:57:02 CET (Marcel Gruenauer <marcel@cpan.org>)
    - require Test::More 0.88 so done_testing works without no_plan (thanks
      jozef)

0.12  Thu 2010.02.11 15:16:22 CET (Marcel Gruenauer <marcel@cpan.org>)
    - updated skeleton files
    - recommend, not require, Devel::CheckOS - only needed for VMS anyway

0.11  Tue 2009.12.08 12:19:25 CET (Marcel Gruenauer <marcel@cpan.org>)
    - made author tests more robust

0.10  Thu 2009.10.08 22:29:11 CEST (Marcel Gruenauer <marcel@cpan.org>)
    - re-release with fixed inc::Module::Install::ReadmeMarkdownFromPod

0.09  Wed 2009.10.07 00:57:14 CEST (Marcel Gruenauer <marcel@cpan.org>)
     - Always report name of .pl files (thanks xsawyerx).
     - pm_file_ok() can now handle Windows paths (thanks clonezone).
     - fixed version number used in documentation (thanks JKUTEJ).
     - Changed dist style and Changes back to standard. People didn't like it -
       the nail that sticks out gets hammered down.
     - Added standard test files; this will also help with CPANTS.

0.08  Thu, 29 May 2008 12:08:32 -0000 (Marcel Gruenauer <marcel@cpan.org>)
     - set the version to 0.08
     - we now check for Devel::CheckOS with UNIVERSAL::require so we don't
       use() it so Devel::CheckOS won't be included when using Test::Compile as
       part of Module::Install::StandardTests